fix: resolve spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -324,7 +324,6 @@ code {
 .users-main-body {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-auto-flow: column;
   row-gap: 2rem;
   padding: 0.5rem;
 }
